# pixel-forge

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml.example
.github/workflows/: ci.yml
apps/android/: README.md
apps/api/: README.md  main.py
apps/web/: README.md
crates/pixelforge-core/: Cargo.toml
crates/pixelforge-core/src/: ase.rs  document.rs  error.rs  lib.rs  postprocess.rs
crates/pixelforge-core/src/document/: cel.rs  layer.rs  mod.rs  pixels.rs  slice.rs  sprite.rs  tileset.rs
crates/pixelforge-core/tests/fixtures/document/: blank_indexed_16.json
docs/: BUILD-STEPS.md  PRD.md
docs/decisions/: advan-tablet-qa.md  ai-pc-setup.md  editor-architecture.md  generation-pipeline.md  module-priority.md  platform-architecture.md  v1-scope.md
docs/specs/: aseprite-parity-matrix.json  aseprite-parity-matrix.md  aseprite-roundtrip.md
infra/ai/: .env.example  README.md  benchmark.py  benchmark_results.json  run_directml.bat  setup.ps1
infra/ai/workflows/: img2img_photo_to_pixel.json  txt2img_pixel_dream.json
scripts/: Resolve-Aseprite.ps1  bootstrap-parity-fixtures.ps1  check-aseprite.ps1  generate-aseprite-fixtures.ps1  generate-goldens.ps1  setup-dev.ps1
scripts/aseprite-fixtures/: generate_all.lua
tests/parity/: ASEPRITE_BASELINE.md  README.md  run_parity.py
tests/parity/fixtures/: README.md  anim_4frame.aseprite  anim_4frame_durations.aseprite  anim_8frame.aseprite  blank_128x128.aseprite  blank_16x16.aseprite  blank_16x16_2f.aseprite  blank_16x16_4f.aseprite  blank_32x32.aseprite  manifest.json  (+29 more)
(+1 files in other folders)
