[package]
name = "pixelforge-core"
description = "Shared Aseprite-parity sprite engine (WASM + NDK)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
flate2 = "1"

[[bin]]
name = "generate_fixtures"
path = "src/bin/generate_fixtures.rs"

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"

[features]
default = []
wasm = []
